--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ projectLeaderName=Asterios Raptis
 slash=/
 colon=:
 issuesPath=/issues
-projectDescription=Template project for create java library projects
+projectDescription=Provide an api for trees
 projectScmProviderDomain=github.com
 projectScmProviderUrl=https://github.com/
 projectScmGitUrlPrefix=scm:git:git:@
@@ -38,16 +38,9 @@ spotlessGradlePluginVersion=6.12.0
 #########################
 # dependencies versions #
 #########################
-lombokVersion=1.18.24
 ##############################
 # test dependencies versions #
 ##############################
-fileWorkerVersion=11.6
-commonsTextVersion=1.10.0
-sillyIoVersion=2.1
-throwableVersion=2.3
-gradleMigrationDataVersion=1.3
-meanbeanVersion=2.0.3
 junitJupiterVersion=5.9.1
 ##########################
 # for deploy on sonatype #
