--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ projectLeaderName=Asterios Raptis
 slash=/
 colon=:
 issuesPath=/issues
-projectDescription=Provide an api for trees
+projectDescription=Provides an api for operating with tree structures
 projectScmProviderDomain=github.com
 projectScmProviderUrl=https://github.com/
 projectScmGitUrlPrefix=scm:git:git:@
