--- a/gradle.properties
+++ b/gradle.properties
@@ -30,25 +30,25 @@ projectRepositoriesSnapshotsName=Sonatype Nexus Snapshots
 ###########################
 # gradle-plugins versions #
 ###########################
-gradlePluginLombokVersion=6.6.1
-gradlePluginVersionsVersion=0.44.0
+gradlePluginLombokVersion=8.0.1
+gradlePluginVersionsVersion=0.47.0
 licenseGradlePluginVersion=0.16.1
-grgitGradlePluginVersion=5.0.0
-spotlessGradlePluginVersion=6.12.0
+grgitGradlePluginVersion=5.2.0
+spotlessGradlePluginVersion=6.19.0
 #########################
 # dependencies versions #
 #########################
-lombokVersion=1.18.24
+lombokVersion=1.18.28
 ##############################
 # test dependencies versions #
 ##############################
 fileWorkerVersion=11.6
 commonsTextVersion=1.10.0
-sillyIoVersion=2.1
+sillyIoVersion=2.2
 throwableVersion=2.3
 gradleMigrationDataVersion=1.3
 meanbeanVersion=2.0.3
-junitJupiterVersion=5.9.1
+junitJupiterVersion=5.10.0-M1
 ##########################
 # for deploy on sonatype #
 ##########################
