--- a/gradle.properties
+++ b/gradle.properties
@@ -30,11 +30,11 @@ projectRepositoriesSnapshotsName=Sonatype Nexus Snapshots
 ###########################
 # gradle-plugins versions #
 ###########################
-gradlePluginLombokVersion=8.0.1
+gradlePluginLombokVersion=8.2.2
 gradlePluginVersionsVersion=0.47.0
 licenseGradlePluginVersion=0.16.1
 grgitGradlePluginVersion=5.2.0
-spotlessGradlePluginVersion=6.19.0
+spotlessGradlePluginVersion=6.20.0
 #########################
 # dependencies versions #
 #########################
@@ -48,7 +48,7 @@ sillyIoVersion=2.2
 throwableVersion=2.3
 gradleMigrationDataVersion=1.3
 meanbeanVersion=2.0.3
-junitJupiterVersion=5.10.0-M1
+junitJupiterVersion=5.10.0
 ##########################
 # for deploy on sonatype #
 ##########################
