--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,9 @@
 ######################
 # project properties #
 ######################
-projectVersion=1.6-SNAPSHOT
+projectVersion=2-SNAPSHOT
 groupPackage=io.github.astrapi69
-projectSourceCompatibility=11
+projectSourceCompatibility=17
 projectInceptionYear=2022
 projectHolderUsername=astrapi69
 projectLeaderName=Asterios Raptis
@@ -27,28 +27,7 @@ projectRepositoriesUserNameKey=ossrhUsername
 projectRepositoriesPasswordKey=ossrhPassword
 projectRepositoriesReleasesName=Sonatype Nexus Releases
 projectRepositoriesSnapshotsName=Sonatype Nexus Snapshots
-###########################
-# gradle-plugins versions #
-###########################
-gradlePluginLombokVersion=8.2.2
-gradlePluginVersionsVersion=0.47.0
-licenseGradlePluginVersion=0.16.1
-grgitGradlePluginVersion=5.2.0
-spotlessGradlePluginVersion=6.20.0
-#########################
-# dependencies versions #
-#########################
-lombokVersion=1.18.28
-##############################
-# test dependencies versions #
-##############################
-fileWorkerVersion=11.6
-commonsTextVersion=1.10.0
-sillyIoVersion=2.2
-throwableVersion=2.3
-gradleMigrationDataVersion=1.3
-meanbeanVersion=2.0.3
-junitJupiterVersion=5.10.0
+projectRepositoriesMavenUrl=https://plugins.gradle.org/m2/
 ##########################
 # for deploy on sonatype #
 ##########################
