rename of module to new name 'io.github.astrapisixtynine.tree.api'
- update gradle to new version 8.10
- update of lombok version to 1.18.34
- update of gradle-plugin dependency 'spotless-plugin-gradle' to new minor version 7.0.0.BETA2

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,19 +1,19 @@
 [versions]
 commons-text-version = "1.12.0"
-file-worker-version = "17.2"
-gradle-migration-data-version = "2.2"
+file-worker-version = "17.4"
+gradle-migration-data-version = "2.4"
 gradle-plugin-grgit-version = "5.2.2"
 gradle-plugin-license-version = "0.16.1"
-gradle-plugin-lombok-version = "8.6"
-gradle-plugin-spotless-version = "7.0.0.BETA1"
+gradle-plugin-lombok-version = "8.10"
+gradle-plugin-spotless-version = "7.0.0.BETA2"
 gradle-plugin-version-catalog-update-version = "0.8.4"
 gradle-plugin-versions-version = "0.51.0"
-junit-jupiter-version = "5.11.0-M2"
-junit-platform-launcher-version = "1.11.0-M2"
-lombok-version = "1.18.32"
+junit-jupiter-version = "5.11.0"
+junit-platform-launcher-version = "1.11.0"
+lombok-version = "1.18.34"
 meanbean-version = "2.0.3"
-silly-io-version = "3"
-throwable-version = "2.3"
+silly-io-version = "3.1"
+throwable-version = "3"
 
 [libraries]
 commons-text = { module = "org.apache.commons:commons-text", version.ref = "commons-text-version" }
@@ -28,6 +28,12 @@ throwable = { module = "io.github.astrapi69:throwable", version.ref = "throwable
 
 [bundles]
 unit-testing = [
+    "throwable",
+    "commons-text",
+    "gradle-migration-data",
+    "throwable",
+    "file-worker",
+    "silly-io",
     "junit-jupiter",
     "meanbean",
 ]
